--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 </head>
 <body>
     <div class="header">
-        <img src="/mnt/data/image008.png" alt="YLT Logo" class="logo">
+        <img src="/yltLogo.svg" alt="YLT Logo" class="logo">
         <h2>Yesamach Levav Trust – Voucher Book Order Form</h2>
         <p>Charity Number: 1127977</p>
     </div>
